# psm

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL  INSTALL.md  ImageProcessor.cpp  ImageProcessor.hpp  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-linux.yml  build-windows.yml  clang-format.yml  clang-tidy.yml  cmake-format.yml  release.yml  run-tests.yml
cmake/: Install.cmake  NoInSourceBuilds.cmake  Options.cmake  Package.cmake  PsmModule.cmake  Testing.cmake  Version.cmake  psmConfig.cmake  version.hpp.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/cli/: CMakeLists.txt  cli_parser.cpp  cli_parser.hpp  image_processor.cpp  image_processor.hpp  psm_cli.cpp
src/app/gui/: CMakeLists.txt
src/app/gui/app/: AppState.hpp  main.cpp
src/app/gui/controller/: CMakeLists.txt  HSliderController.cpp  HSliderController.hpp  PreviewController.cpp  PreviewController.hpp  SliderConfig.cpp  SliderConfig.hpp  ToolbarController.cpp  ToolbarController.hpp  VSliderController.cpp
src/app/gui/ui/: UIRenderer.cpp
src/app/gui/ui/panels/: ControlPanel.cpp  ControlPanel.hpp  HorizontalSlider.cpp  HorizontalSlider.hpp  PanelRect.hpp  PixelInfo.cpp  PreviewArea.cpp  Toolbar.cpp  VerticalSlider.hpp
src/app/shared/: CMakeLists.txt
src/app/shared/image_io/: CMakeLists.txt  image_io.cpp  image_io.hpp
src/app/shared/image_processor/: CMakeLists.txt  image_processor.cpp  image_processor.hpp
src/psm/: CMakeLists.txt  orgb.cpp  orgb.ixx  psm.cpp  psm.ixx  utils.cpp  utils.hpp
src/psm/adjust_channels/: CMakeLists.txt  adjust_channels.cpp
src/psm/adobe_rgb/: CMakeLists.txt  adobe_rgb.cpp
src/psm/dci_p3/: CMakeLists.txt  dci_p3.cpp
src/psm/detail/: CMakeLists.txt  adjust_channels.cpp
src/psm/display_p3/: CMakeLists.txt  display_p3.cpp
src/psm/include/psm/: adjust_channels.hpp  adobe_rgb.hpp  color_space.hpp  color_space_concept.hpp  color_space_traits.hpp  orgb.hpp  percent.hpp  psm.hpp  srgb.hpp
src/psm/include/psm/detail/: adjust_channels.hpp  adobe_rgb.hpp  color_space_concept.hpp  colorspace.hpp  dci_p3.hpp  display_p3.hpp  orgb.hpp  pixel_transformation.hpp  pro_photo_rgb.hpp  srgb.hpp  types.hpp
src/psm/orgb/: CMakeLists.txt  orgb.cpp
src/psm/pro_photo_rgb/: CMakeLists.txt  pro_photo_rgb.cpp
src/psm/srgb/: CMakeLists.txt  srgb.cpp
src/psm_cli/: CMakeLists.txt  cli_parser.hpp  image_io.cpp  image_io.hpp  image_loader.cpp  image_loader.hpp  image_processor.hpp  image_saver.cpp  image_saver.hpp  psm_cli.cpp
src/psm_gui/: CMakeLists.txt  app_state.h  file_dialog.cpp  file_dialog.h  image_loader.cpp  image_loader.h  image_processor.cpp  image_processor.h  main.cpp  psm_gui.cpp  ui_renderer.cpp  ui_renderer.h
src/psm_gui/app/: Actions.hpp  AppState.hpp  Application.cpp  Application.hpp  CMakeLists.txt  app_state.h  conversion_types.h
src/psm_gui/controller/: CMakeLists.txt  HSliderController.cpp  PreviewController.cpp  PreviewController.hpp  SliderConfig.cpp  SliderConfig.hpp  SliderController.cpp  SliderController.hpp  ToolbarController.cpp  ToolbarController.hpp  VSliderController.cpp  VSliderController.hpp
src/psm_gui/style/: style_manager.cpp  style_manager.h
src/psm_gui/ui/: CMakeLists.txt  UIRenderer.cpp  UIRenderer.hpp  controls_area.cpp  controls_area.h  preview_area.cpp  preview_area.h  ui_renderer.cpp  ui_renderer.h
src/psm_gui/ui/panels/: HorizontalSlider.cpp  InfoPanel.cpp  InfoPanel.hpp  PixelInfo.cpp  PixelInfo.hpp  PreviewArea.cpp  PreviewArea.hpp  Toolbar.cpp  Toolbar.hpp  VerticalSlider.cpp
src/psm_gui/utils/: file_dialog.cpp  image_loader.h  image_processor.h
test/: .clang-tidy  CMakeLists.txt
test/psm/: CMakeLists.txt  test_utils.hpp
test/psm/adjust_channels/: CMakeLists.txt  adjust_channels_test.cpp
test/psm/adobe_rgb/: CMakeLists.txt  adobe_rgb_test.cpp
test/psm/container_compat/: CMakeLists.txt  container_compat_test.cpp
test/psm/display_p3/: CMakeLists.txt  display_p3_test.cpp
test/psm/orgb/: CMakeLists.txt  orgb_test.cpp
test/psm/percent/: CMakeLists.txt  percent_test.cpp
test/psm/pro_photo_rgb/: CMakeLists.txt  pro_photo_rgb_test.cpp
